--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,17 @@
+attrs==22.2.0
 certifi==2022.12.7
 charset-normalizer==3.0.1
 chess==1.9.4
+exceptiongroup==1.1.0
 idna==3.4
+iniconfig==2.0.0
 numpy==1.24.2
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
+packaging==23.0
 Pillow==9.4.0
+pluggy==1.0.0
+pytest==7.2.1
 requests==2.28.2
+tomli==2.0.1
 torch==1.13.1
 torchaudio==0.13.1
 torchvision==0.14.1
