--- a/requirements.txt
+++ b/requirements.txt
@@ -1,95 +1,82 @@
-apturl==0.5.2
-attrs==22.2.0
-bcrypt==3.2.0
-blinker==1.4
-Brlapi==0.8.3
-certifi==2020.6.20
-chardet==4.0.0
-chess==1.9.4
-click==8.0.3
-colorama==0.4.4
-command-not-found==0.3
-coverage==7.2.1
+argcomplete==3.0.4
+astunparse==1.6.3
+av==10.0.0
+beartype==0.12.0
+brotli==1.0.9
+brotlicffi==1.0.9.2
+conda==4.3.16
+ConfigParser==5.3.0
+coremltools==6.2
 cryptography==3.4.8
-cupshelpers==1.0
-dbus-python==1.2.18
-defer==1.0.6
-distro==1.7.0
-distro-info===1.1build1
-duplicity==0.8.21
-exceptiongroup==1.1.0
-fasteners==0.14.1
-future==0.18.2
-gyp==0.1
-httplib2==0.20.2
-idna==3.3
-importlib-metadata==4.6.4
-iniconfig==2.0.0
-jeepney==0.7.1
+Cython==0.29.33
+defusedxml==0.7.1
+dill==0.3.6
+dl==0.1.0
+docutils==0.19
+dp==1.00
+etcd==2.0.8
+expecttest==0.1.4
+flashlight==0.1.1
+foo==.1
+genapi==0.0.8
+h5py==3.8.0
+HTMLParser==0.0.2
+hypothesis==6.70.0
+importlib_metadata==4.6.4
+ipython==8.11.0
+ipywidgets==8.0.5
+Jinja2==3.1.2
+jnius==1.1.0
 keyring==23.5.0
-language-selector==0.1
-launchpadlib==1.10.16
-lazr.restfulclient==0.14.4
-lazr.uri==1.0.6
+lmdb==1.4.0
 lockfile==0.12.2
-louis==3.20.0
-macaroonbakery==1.3.1
-Mako==1.1.3
-MarkupSafe==2.0.1
-monotonic==1.6
-more-itertools==8.10.0
-netifaces==0.11.0
-numpy==1.24.2
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cudnn-cu11==8.5.0.96
-oauthlib==3.2.0
+lxml==4.9.2
+matplotlib==3.7.1
+monkeytype==23.3.0
+moviepy==1.0.3
+mtrand==0.1
+mypy==1.1.1
+networkx==3.0
+numarray==1.5.1
+Numeric==24.2
 olefile==0.46
-packaging==23.0
-paramiko==2.9.3
+onnxruntime==1.14.1
+ordereddict==1.1
+pandas==1.5.3
 pexpect==4.8.0
-Pillow==9.0.1
-pip-autoremove==0.10.0
-pluggy==1.0.0
-protobuf==3.12.4
-ptyprocess==0.7.0
-py==1.11.0
-pycairo==1.20.1
-pycups==2.0.1
-PyGObject==3.42.1
-PyJWT==2.3.0
-pymacaroons==0.13.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-pyRFC3339==1.1
-pytest==7.2.1
-pytest-cov==4.0.0
-pytest-metadata==2.0.4
-python-apt==2.4.0+ubuntu1
-python-dateutil==2.8.1
-python-debian===0.1.43ubuntu1
+pickle5==0.0.12
+protobuf==4.22.1
+psutil==5.9.4
+pycocotools==2.0.6
+pydot==1.4.2
+PyInstaller==5.9.0
+pynvml==11.5.0
+pyOpenSSL==23.0.0
+PyQt5==5.15.9
+PyQt6==6.4.2
+PySide2==5.15.2.1
+PySide6==6.4.3
+pytorch_lightning==2.0.0
 pytz==2022.1
-pyxdg==0.27
-PyYAML==5.4.1
-reportlab==3.6.8
-requests==2.25.1
-screen-resolution-extra==0.0.0
-SecretStorage==3.3.1
-six==1.16.0
-systemd-python==234
-tomli==2.0.1
-torch==1.13.1
-torchaudio==0.13.1
-torchvision==0.14.1
-typing_extensions==4.4.0
-ubuntu-advantage-tools==8001
-ubuntu-drivers-common==0.0.0
-ufw==0.36.1
-unattended-upgrades==0.1
-urllib3==1.26.5
-usb-creator==0.3.7
-wadllib==1.3.6
-xdg==5
-xkit==0.0.0
+PyYAML==6.0
+railroad==0.5.0
+scipy==1.10.1
+sentencepiece==0.1.97
+simplejson==3.18.4
+soundfile==0.12.1
+Sphinx==6.1.3
+sympy==1.11.1
+tensorflow==2.12.0
+threadpoolctl==3.1.0
+toml==0.10.2
+torcharrow==0.1.0
+torchdynamo==1.13.0
+tornado==6.2
+tqdm==4.65.0
+Twisted==22.10.0
+urllib3_secure_extra==0.1.0
+xmlrpclib==1.0.1
+xmlrunner==1.7.7
+z3==0.2.0
 zipp==1.0.0
+zope==5.8.1
